# shelter

./: .gitignore  obsidian.py  pyproject.toml
shelter/: __init__.py  colour.py  core.py  data.py  io.py  mappings.py  old_code.py  plotting.py  search.py  utils.py
shelter/styles/: dark_style.mplstyle  light_style.mplstyle  paper_text.mplstyle  talk_text.mplstyle  use_sans.mplstyle  use_serif.mplstyle
shelter/utils/: fun.py
testing/: data_testing.py  shelter_testing.py
